<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/layoutLL"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DetailsActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/titleTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_text"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textSize="20sp"/>

    </androidx.appcompat.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        tools:ignore="UselessParent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/displayImageTV"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:src="@drawable/icon_image" />

    </RelativeLayout>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/display_name_text"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_margin="2dp" />

        <TextView
            android:id="@+id/displayNameTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:hint="@string/display_name_text_tv"
            android:textColor="@color/black"
            android:textSize="20sp" />

    </TableRow>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/display_description_text"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_margin="2dp" />

    <TextView
        android:id="@+id/displayDescriptionTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:hint="@string/display_description_text_tv"
        android:background="@drawable/widget_border"
        android:textColor="@color/black"
        android:textSize="20sp" />

</LinearLayout>